upgrade to astro to v5

--- a/src/pages/people/index.astro
+++ b/src/pages/people/index.astro
@@ -55,25 +55,25 @@ const metadata = {
         },
         testimonial: `Dr. Porntip Chiewchankaset, specializes in genome-scaled metabolic models and plant physiology. Her research contributes to understanding the intricate metabolic processes in plants and their applications.`,
       },
-      {
-        name: 'Nattawet Sriwichai',
-        job: 'Research Assistant',
-        image: {
-          src: '~/assets/images/people/nattawet.jpg',
-          alt: 'Nattawet Sriwichai',
-        },
-        testimonial: `Nattawet Sriwichai serves as a research assistant, specializing in non-coding RNA and gene regulatory network reconstruction. His expertise also includes next-generation sequencing data analysis, microbiome analysis, and web application development. His diverse skills contribute to various aspects of genomic and bioinformatic research.`,
-        link: getPermalink('/people/nattawet-sriwichai'),
-      },
-      {
-        name: 'Nattavat Sukko',
-        job: 'Research Assistant',
-        image: {
-          src: '',
-          alt: 'Nattavat Sukko',
-        },
-        testimonial: `Nattavat Sukko, is dedicated to unraveling the mysteries of the transcriptional regulatory network. His research explores the intricate mechanisms governing gene expression, contributing valuable insights to the forefront of scientific discovery`,
-      },
+      // {
+      //   name: 'Nattawet Sriwichai',
+      //   job: 'Research Assistant',
+      //   image: {
+      //     src: '~/assets/images/people/nattawet.jpg',
+      //     alt: 'Nattawet Sriwichai',
+      //   },
+      //   testimonial: `Nattawet Sriwichai serves as a research assistant, specializing in non-coding RNA and gene regulatory network reconstruction. His expertise also includes next-generation sequencing data analysis, microbiome analysis, and web application development. His diverse skills contribute to various aspects of genomic and bioinformatic research.`,
+      //   link: getPermalink('/people/nattawet-sriwichai'),
+      // },
+      // {
+      //   name: 'Nattavat Sukko',
+      //   job: 'Research Assistant',
+      //   image: {
+      //     src: '',
+      //     alt: 'Nattavat Sukko',
+      //   },
+      //   testimonial: `Nattavat Sukko, is dedicated to unraveling the mysteries of the transcriptional regulatory network. His research explores the intricate mechanisms governing gene expression, contributing valuable insights to the forefront of scientific discovery`,
+      // },
       {
         name: 'Issaraporn A-piwat',
         job: 'Research Assistant',
