--- a/src/components/common/Analytics.astro
+++ b/src/components/common/Analytics.astro
@@ -1,10 +1,20 @@
 ---
-import { GoogleAnalytics } from '@astrolib/analytics';
 import { ANALYTICS } from '~/utils/config';
+
+const id = ANALYTICS?.vendors?.googleAnalytics?.id;
+const partytown = !!ANALYTICS?.vendors?.googleAnalytics?.partytown;
 ---
 
-{
-  ANALYTICS?.vendors?.googleAnalytics?.id ? (
-    <GoogleAnalytics id={String(ANALYTICS.vendors.googleAnalytics.id)} partytown={ANALYTICS?.vendors?.googleAnalytics?.partytown} />
-  ) : null
-}
+{ id && id.startsWith('GTM-') ? (
+  <>
+    <script async src={`https://www.googletagmanager.com/gtm.js?id=${String(id)}`} />
+    <noscript>
+      <iframe src={`https://www.googletagmanager.com/ns.html?id=${String(id)}`} height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+  </>
+) : id && id.startsWith('G-') ? (
+  <>
+    <script src={`https://www.googletagmanager.com/gtag/js?id=${String(id)}`} async></script>
+    <script set:html={`window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', '${String(id)}');`}></script>
+  </>
+) : null }
